Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -194,41 +194,41 @@
         <h1>Double Coupler Studio LinkTree</h1>
         <!-- Tombol utama dengan sub-tombol -->
         <button class="dropdown-btn" onmouseenter="toggleSubLinks('social-links')" onclick="togglehiddenlinktree('social-links')">  
-            <img src="img/social.png" alt=""> Social Media Links
+            <img src="social.png" alt=""> Social Media Links
         </button> <!-- Menambahkan gambar untuk tombol utama, ganti src jika perlu -->
         <div id="social-links" class="sub-links">
             <a href="https://discord.gg/twRUf5dxnc" class="link-item" target="_blank">
-                <img src="img/dscrd.png" alt="Discord"> Discord
+                <img src="dscrd.png" alt="Discord"> Discord
             </a>
             <a href="http://tiktok.com/@doublecouplerofc" class="link-item" target="_blank">
-                <img src="img/tktok.png" alt="Tiktok"> Tiktok
+                <img src="tktok.png" alt="Tiktok"> Tiktok
             </a>
             <a href="" class="link-item" target="_blank">
-                <img src="img/youtube.png" alt="YouTube"> YouTube
+                <img src="youtube.png" alt="YouTube"> YouTube
             </a>
             <a href="https://chat.whatsapp.com/JhaDm5HrpcQGkekDbIFyN9" class="link-item" target="_blank">
-                <img src="img/wa.png" alt="Whatsapp"> Whatsapp Group
+                <img src="wa.png" alt="Whatsapp"> Whatsapp Group
             </a>
             <a href="https://whatsapp.com/channel/0029VazTdvg6hENkbRgq2w0q" class="link-item" target="_blank">
-                <img src="img/wa.png" alt="Whatsapp"> Whatsapp Channel
+                <img src="wa.png" alt="Whatsapp"> Whatsapp Channel
             </a>
         </div>
         <!-- Link lainnya jika diperlukan -->
         <button class="dropdown-btn" onmouseenter="toggleSubLinks('roblox')" onclick="togglehiddenlinktree('roblox')">
-            <img src="img/roblox.png" alt="Roblox"> Roblox Links
+            <img src="roblox.png" alt="Roblox"> Roblox Links
         </button>
         <div id="roblox" class="sub-links">
             <a href="" class="link-item" target="_blank">
-                <img src="img/roblox.png" alt="Inmitra"> Inmitra
+                <img src="roblox.png" alt="Inmitra"> Inmitra
             </a>
             <a href="" class="link-item" target="_blank">
-                <img src="img/roblox.png" alt="Inmitra"> Nusantara Milenium Railway
+                <img src="roblox.png" alt="Inmitra"> Nusantara Milenium Railway
             </a>
             <a href="" class="link-item" target="_blank">
-                <img src="img/roblox.png" alt="Inmitra"> Game-3
+                <img src="roblox.png" alt="Inmitra"> Game-3
             </a>
             <a href="" class="link-item" target="_blank">
-                <img src="img/roblox.png" alt="Inmitra"> Game-4
+                <img src="roblox.png" alt="Inmitra"> Game-4
             </a>
         </div>
     </div>
@@ -252,4 +252,5 @@
         }
     </script>
 </body>
+
 </html>
