--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <body>
     <header>
         <div>
-            <img src="img/dcslogo.png" class="logo" alt="Logo">
+            <img src="dcslogo.png" class="logo" alt="Logo">
         </div>
     </header>
     <div class="linktree-container">
@@ -254,3 +254,4 @@
 </body>
 
 </html>
+
