--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <img src="roblox.png" alt="Inmitra"> Game-4
             </a>
         </div>
-        <button class="dropdown-btn" herf="">
+        <button class="dropdown-btn" herf="https://api.whatsapp.com/send/?phone=%2B6282220949233&text&type=phone_number&app_absent=0">
             <img src="wa.png" alt="Roblox"> Customer
         </button>
     </div>
@@ -256,3 +256,4 @@
     </script>
 </body>
 </html>
+
