--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="dcslogo.png" type="image/x-icon">
     <title>Double Coupler Studio LinkTree</title>
     <style>
         body {
@@ -187,7 +188,7 @@
 <body>
     <header>
         <div>
-            <img src="img/dcslogo.png" class="logo" alt="Logo">
+            <img src="dcslogo.png" class="logo" alt="Logo">
         </div>
     </header>
     <div class="linktree-container">
@@ -256,4 +257,5 @@
     </script>
 </body>
 </html>
+
 
