Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
         }
         footer a {
             color: #fff;
-            text-decoration: none;
+            font-weight: bold;
+            text-decoration: underline;
         }
         footer a:hover {
             text-decoration: underline;
@@ -287,17 +288,19 @@
             <img src="roblox.png" alt="Roblox"> Roblox Links
         </button>
         <div id="roblox" class="sub-links">
-            <a href="" class="link-item" target="_blank">
-                <img src="roblox.png" alt="Inmitra"> Inmitra
+            <h4> Tidak Mendapat Update </h4>
+            <a href="https://www.roblox.com/id/games/18543659842/Indonesia-Millenium-Train-Sector-Sembon" class="link-item" target="_blank">
+                <img src="inmitra.png" alt="Inmitra"> Inmitra
             </a>
+            <a href="https://www.roblox.com/id/games/112887240560643/INDONESIA-TRAIN-DRIVE-SIMULATOR" class="link-item" target="_blank">
+                <img src="itds.png" alt="ITDS"> Indonesian Train Drive Simulator (ITDS)
+            </a>
+            <h4> Masih Update </h4>
             <a href="https://www.roblox.com/id/games/112972515177807/Nusantara-Millenium-Railway" class="link-item" target="_blank">
-                <img src="roblox.png" alt="Inmitra"> Nusantara Milenium Railway (NMR)
+                <img src="nmr.png" alt="NMR"> Nusantara Milenium Railway (NMR)
             </a>
-            <a href="" class="link-item" target="_blank">
-                <img src="roblox.png" alt="Inmitra"> Indonesian Train Drive Simulator (ITDS)
-            </a>
-            <a href="" class="link-item" target="_blank">
-                <img src="roblox.png" alt="Inmitra"> Game-4
+            <a href="https://www.roblox.com/id/games/95965113212556/Indonesia-Train-Incident" class="link-item" target="_blank">
+                <img src="jtc.png" alt="JTC"> Indonesia Train Incident
             </a>
         </div>
     </div>
