--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         }
         footer {
             margin-top: 40px;
+            margin-bottom: 10px;
             font-size: 14px;
             opacity: 0.8;
             text-align: center;
@@ -325,3 +326,4 @@
     </script>
 </body>
 </html>
+
