Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="dcslogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="vnqFoF3HKyxsWnMAyiAuk60MsbscoxYieP38B9Nxe2M" />
     <title>Double Coupler Studio LinkTree</title>
     <style>
         body {
@@ -326,4 +327,5 @@
     </script>
 </body>
 </html>
+
 
